--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
                 <button type="submit">ارسال</button>
             </form>
         </section>
-        <script src="scrip.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
